Correct the Kafka buffer tests to test correctly as bytes, adds bytes tests, fixes some serialization issues with the Kafka buffer.
Signed-off-by: David Venable <dlv@amazon.com>